--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700;800&family=Markazi+Text:wght@400;500&display=swap"
     rel="stylesheet">
 
-  <title>React App</title>
+  <title>Little Lemon</title>
 </head>
 
 <body>
